--- a/src/main/resources/com/javafxdemo/fxml/add-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/add-view.fxml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="685.0" stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.AddController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="685.0" stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.AddController">
     <bottom>
         <ButtonBar buttonMinWidth="50.0" prefHeight="70.0" prefWidth="84.0" BorderPane.alignment="CENTER">
             <buttons>
@@ -33,17 +41,17 @@
         <VBox prefHeight="258.0" prefWidth="450.0" spacing="10.0" BorderPane.alignment="CENTER">
          <AnchorPane prefHeight="473.0" prefWidth="693.0">
             <children>
-               <TextField fx:id="idItemInput" layoutX="263.0" layoutY="37.0" />
-               <TextField fx:id="LocationInputTextField" layoutX="263.0" layoutY="74.0" />
-               <TextField fx:id="titleInput" layoutX="263.0" layoutY="117.0" />
+               <TextField fx:id="idItemInput" layoutX="263.0" layoutY="37.0" prefHeight="25.0" prefWidth="155.0" />
+               <TextField fx:id="inStockInput" layoutX="263.0" layoutY="74.0" prefHeight="25.0" prefWidth="154.0" />
+               <TextField fx:id="titleInput" layoutX="263.0" layoutY="117.0" prefHeight="25.0" prefWidth="156.0" />
 
                 <Label fx:id="idItemLable" alignment="CENTER" contentDisplay="CENTER" layoutX="202.0" layoutY="33.0" prefHeight="33.0" prefWidth="54.0" text="ItemID" textAlignment="CENTER">
                   <font>
                      <Font size="11.0" />
                   </font></Label>
-               <TextField fx:id="isbnInput" layoutX="263.0" layoutY="156.0" />
+               <TextField fx:id="isbnInput" layoutX="263.0" layoutY="156.0" prefHeight="25.0" prefWidth="157.0" />
                <TextField fx:id="publisherInput" layoutX="263.0" layoutY="241.0" prefHeight="17.0" prefWidth="161.0" />
-               <Label fx:id="inStockLable" alignment="CENTER" contentDisplay="CENTER" layoutX="140.0" layoutY="74.0" prefHeight="33.0" prefWidth="116.0" text="Location ID" textAlignment="CENTER">
+               <Label fx:id="inStockLable" alignment="CENTER" contentDisplay="CENTER" layoutX="140.0" layoutY="74.0" prefHeight="33.0" prefWidth="116.0" text="Number in stock" textAlignment="CENTER">
                   <font>
                      <Font size="11.0" />
                   </font>
@@ -75,7 +83,7 @@
                      <Font size="11.0" />
                   </font>
                </Label>
-               <TextField fx:id="barcodeInput" layoutX="263.0" layoutY="-7.0" prefHeight="17.0" prefWidth="161.0" />
+               <TextField fx:id="barcodeInput" layoutX="263.0" layoutY="-7.0" prefHeight="25.0" prefWidth="155.0" />
                <Label fx:id="barcodeLable" alignment="CENTER" contentDisplay="CENTER" layoutX="202.0" layoutY="-11.0" prefHeight="33.0" prefWidth="54.0" text="Barcode" textAlignment="CENTER">
                   <font>
                      <Font size="11.0" />
@@ -88,6 +96,12 @@
                   </font>
                </Label>
                <Label fx:id="insertItemInfoLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="479.0" layoutY="113.0" prefHeight="33.0" prefWidth="87.0" textAlignment="CENTER">
+                  <font>
+                     <Font size="11.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="totalInStockInput" layoutX="263.0" layoutY="200.0" prefHeight="25.0" prefWidth="159.0" />
+               <Label fx:id="totalInStockLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="192.0" layoutY="196.0" prefHeight="33.0" prefWidth="54.0" text="Total stock" textAlignment="CENTER">
                   <font>
                      <Font size="11.0" />
                   </font>
