--- a/src/main/resources/com/javafxdemo/fxml/adminStartpage-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/adminStartpage-view.fxml
@@ -32,8 +32,9 @@
             <Button fx:id="searchButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Search" />
             <Button fx:id="loanButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Loan" />
             <Button fx:id="overviewButton" mnemonicParsing="false" onAction="#onOverviewButton" prefHeight="42.0" prefWidth="112.0" text="Library Overview" />
-            <Button fx:id="crudButton" mnemonicParsing="false" onAction="#onCrudButton" prefHeight="42.0" prefWidth="112.0" text="Add/update item" />
-         <Button fx:id="loanButton1" mnemonicParsing="false" prefHeight="42.0" prefWidth="112.0" text="Delete item" />
+            <Button fx:id="addButton" mnemonicParsing="false" onAction="#onAddButtonClick" prefHeight="42.0" prefWidth="112.0" text="Add item" />
+         <Button fx:id="updateButton" layoutX="48.0" layoutY="163.0" mnemonicParsing="false" onAction="#onUpdateButtonClick" prefHeight="42.0" prefWidth="112.0" text="Update item" />
+         <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#onDeleteButtonClick" prefHeight="42.0" prefWidth="112.0" text="Delete item" />
         </VBox>
     </left>
     <center>
