--- a/src/main/resources/com/javafxdemo/fxml/add-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/add-view.fxml
@@ -106,6 +106,11 @@
                      <Font size="11.0" />
                   </font>
                </Label>
+               <Label fx:id="successMessageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="451.0" layoutY="174.0" prefHeight="198.0" prefWidth="161.0" textAlignment="CENTER">
+                  <font>
+                     <Font size="11.0" />
+                  </font>
+               </Label>
             </children>
          </AnchorPane>
             <HBox alignment="CENTER" prefHeight="0.0" prefWidth="113.0" spacing="8.0" />
