--- a/src/main/resources/com/javafxdemo/fxml/search-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/search-view.fxml
@@ -28,15 +28,16 @@
                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
             </padding>
          </Label>
-         <Button fx:id="searchResultsLoanButton" layoutX="749.0" layoutY="227.0" mnemonicParsing="false" onAction="#onSearchResultsLoanButton" text="Loan?" />
+         <Button fx:id="searchResultsLoanButton" layoutX="749.0" layoutY="227.0" mnemonicParsing="false" onAction="#onSearchResultsLoanButton" text="Loan" />
          <Label fx:id="isbnLabel" layoutX="52.0" layoutY="227.0" prefHeight="83.0" prefWidth="163.0" text="ISBN:" />
          <Label fx:id="titleLabel" layoutX="224.0" layoutY="227.0" prefHeight="83.0" prefWidth="163.0" text="Title:" />
          <Label fx:id="publisherLabel" layoutX="399.0" layoutY="227.0" prefHeight="83.0" prefWidth="163.0" text="Publisher" />
          <Label fx:id="numberInStockLabel" layoutX="52.0" layoutY="325.0" prefHeight="83.0" prefWidth="163.0" text="No. in stock:" />
          <Label fx:id="categoryLabel" layoutX="224.0" layoutY="327.0" prefHeight="83.0" prefWidth="163.0" text="Category: " />
          <Label fx:id="authorLabel" layoutX="399.0" layoutY="325.0" prefHeight="83.0" prefWidth="163.0" text="Author:" />
-         <Button fx:id="backButton" layoutX="749.0" layoutY="483.0" mnemonicParsing="false" onAction="#onBackButtonClick" text="Back?" />
+         <Button fx:id="backButton" layoutX="749.0" layoutY="483.0" mnemonicParsing="false" onAction="#onBackButtonClick" text="Back" />
          <Label fx:id="errorLabel" layoutX="591.0" layoutY="300.0" prefHeight="72.0" prefWidth="286.0" />
+         <Button fx:id="loginRedirectButton" layoutX="751.0" layoutY="372.0" mnemonicParsing="false" onAction="#onLoginRedirectButtonClick" text="Login" visible="false" />
       </AnchorPane>
    </center>
    <right>
