--- a/src/main/resources/com/javafxdemo/fxml/startpage-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/startpage-view.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.StartpageController">
+<BorderPane stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.StartpageController">
     <right>
         <AnchorPane prefHeight="206.0" prefWidth="266.0" BorderPane.alignment="CENTER">
             <BorderPane.margin>
@@ -46,9 +46,8 @@
       <Insets left="5.0" right="5.0" />
    </padding>
    <left>
-       <ImageView fitHeight="150.0" fitWidth="202.0" pickOnBounds="true" preserveRatio="true"
-                  BorderPane.alignment="CENTER">
-           <Image url="@../images/LTULogo.jpg"/>
+       <ImageView fitHeight="150.0" fitWidth="202.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+           <Image url="@../images/LTULogo.jpg" />
        </ImageView>
    </left>
 </BorderPane>
