--- a/src/main/resources/com/javafxdemo/fxml/loanReturn-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/loanReturn-view.fxml
@@ -2,9 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -19,16 +17,12 @@
       </VBox>
    </top>
    <left>
-      <AnchorPane fx:id="anchorPane1" prefHeight="582.0" prefWidth="758.0" BorderPane.alignment="CENTER">
-         <children>
-            <DialogPane layoutX="7.0" layoutY="74.0" prefHeight="58.0" prefWidth="567.0" stylesheets="@../LibraryStylesheet.css" />
-         </children></AnchorPane>
+      <AnchorPane fx:id="anchorPane1" prefHeight="582.0" prefWidth="758.0" BorderPane.alignment="CENTER" />
    </left>
    <right>
        <AnchorPane fx:id="anchorPane2" prefHeight="459.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <children>
-            <ScrollBar fx:id="scrollBar" blockIncrement="0.0" layoutX="7.0" layoutY="28.0" max="50.0" orientation="VERTICAL" prefHeight="547.0" prefWidth="14.0" unitIncrement="10.0" />
-            <Button fx:id="confirmButton" layoutX="49.0" layoutY="28.0" mnemonicParsing="false" onAction="#onConfirmButton" prefHeight="34.0" prefWidth="75.0" text="Confirm" />
+            <Button fx:id="confirmButton" layoutX="59.0" layoutY="320.0" mnemonicParsing="false" onAction="#onConfirmButton" prefHeight="34.0" prefWidth="75.0" text="Confirm" />
             <Button fx:id="backButton" layoutX="59.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="34.0" prefWidth="75.0" text="Back" />
             <Label fx:id="successLabel" alignment="CENTER" layoutX="42.0" layoutY="66.0" prefHeight="49.0" prefWidth="75.0" />
          </children>
