--- a/src/main/resources/com/javafxdemo/fxml/delete-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/delete-view.fxml
@@ -21,8 +21,8 @@
                     <Image url="@../images/LTULogo.jpg" />
                 </ImageView>
                 <Button mnemonicParsing="false" prefHeight="42.0" text="Exit" visible="false" />
-                <Button fx:id="exitButton" mnemonicParsing="false" prefHeight="42.0" text="Exit" onAction="#onExitButtonClick" />
-                <Button fx:id="backButton" mnemonicParsing="false" prefHeight="42.0" text="Back" onAction="#onBackButtonClick" />
+                <Button fx:id="exitButton" mnemonicParsing="false" onAction="#onExitButtonClick" prefHeight="42.0" text="Exit" />
+                <Button fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="42.0" text="Back" />
             </buttons>
             <BorderPane.margin>
                 <Insets bottom="15.0" right="15.0" top="15.0" />
@@ -39,14 +39,10 @@
     <center>
         <VBox prefHeight="258.0" prefWidth="450.0" spacing="10.0" BorderPane.alignment="CENTER">
             <AnchorPane prefHeight="412.0" prefWidth="557.0">
-                <TextField fx:id="barcodeInput" layoutX="76.0" layoutY="25.0" onAction="#onDeleteItemButtonClick"
-                           promptText="Item barcode"/>
-                <Button fx:id="deleteItemButton" layoutX="242.0" layoutY="17.0" mnemonicParsing="false"
-                        onAction="#onDeleteItemButtonClick" prefHeight="35.0" prefWidth="65.0" text="Confirm delete"/>
-                <Label fx:id="barcodeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="21.0"
-                       prefHeight="33.0" prefWidth="54.0" text="Barcode" textAlignment="CENTER"/>
-                <Label fx:id="deleteItemConfirmationLabel" layoutX="76.0" layoutY="76.0" prefHeight="19.0"
-                       prefWidth="416.0"/>
+                <TextField fx:id="barcodeInput" layoutX="76.0" layoutY="25.0" onAction="#onDeleteItemButtonClick" promptText="Item barcode" />
+                <Button fx:id="deleteItemButton" layoutX="242.0" layoutY="17.0" mnemonicParsing="false" onAction="#onDeleteItemButtonClick" prefHeight="35.0" prefWidth="111.0" text="Confirm delete" />
+                <Label fx:id="barcodeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="21.0" prefHeight="33.0" prefWidth="54.0" text="Barcode" textAlignment="CENTER" />
+                <Label fx:id="deleteItemConfirmationLabel" layoutX="76.0" layoutY="76.0" prefHeight="19.0" prefWidth="416.0" />
             </AnchorPane>
             <HBox alignment="CENTER" prefHeight="214.0" prefWidth="753.0" spacing="8.0" />
             <StackPane prefHeight="0.0" prefWidth="753.0" />
@@ -56,6 +52,9 @@
         </VBox>
     </center>
     <top>
-        <Label fx:id="generalTextLabel" alignment="CENTER_RIGHT" contentDisplay="CENTER" maxHeight="-Infinity" prefHeight="14.0" style="-fx-padding: 0;" text="Please enter the barcode to delete." BorderPane.alignment="CENTER" />
+        <Label fx:id="generalTextLabel" alignment="CENTER_RIGHT" contentDisplay="CENTER" maxHeight="-Infinity" prefHeight="14.0" style="-fx-padding: 0;" text="Please enter the barcode of the item you wish to delete." BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets top="40.0" />
+         </BorderPane.margin></Label>
     </top>
 </BorderPane>
