--- a/src/main/resources/com/javafxdemo/LibraryStylesheet.css
+++ b/src/main/resources/com/javafxdemo/LibraryStylesheet.css
@@ -1,13 +1,14 @@
-.root {-fx-background-color: #0B0B45}
-.anchor-box {-fx-background-color: #0B0B45}
-.vbox {-fx-background-color: #0B0B45}
-.borderpane {-fx-background-color: #0B0B45}
-.stage {-fx-background-color: #0B0B45}
-.scene {-fx-background-color: #0B0B45}
-.button {-fx-background-color: #00ff00; -fx-text-fill: #000000;-fx-font-weight: bold}
-.button:hover {-fx-background-color: #c6fc04}
-.text-field {fx-background-color: #ffffff; -fx-text-fill: #0B0B45}
-.text-area {-fx-background-color: #ffffff; -fx-text-fill: #0B0B45}
-.label {-fx-background-color: #0B0B45; -fx-text-fill: #00ff00; -fx-font-family: "Avenir Next", sans-serif}
+.root {-fx-background-color: lightgrey}
+.anchor-box {-fx-background-color: lightgrey}
+.vbox {-fx-background-color: lightgrey}
+.borderpane {-fx-background-color: lightgrey}
+.stage {-fx-background-color: lightgrey}
+.scene {-fx-background-color: lightgrey}
+.button {-fx-background-color: #1964b4; -fx-text-fill: #000000;-fx-font-weight: bold}
+.button:hover {-fx-background-color: blue}
+.text-field {fx-background-color: grey; -fx-text-fill: black}
+.text-area {-fx-background-color: grey; -fx-text-fill: black}
+.label {-fx-background-color: lightgrey; -fx-text-fill: darkblue; -fx-font-family: "Avenir Next", sans-serif;-fx-font-weight: bold}
 #welcomeTextLabel {-fx-text-fill: #e80808; -fx-font-family: "Avenir Next", sans-serif; -fx-font-size: 16}
 #loginErrorLabel {-fx-text-fill: #FF8C00; -fx-font-family: "system"}
+.dialog-box {-fx-background-color: lightgrey; -fx-text-fill: darkblue; -fx-font-family: "Avenir Next", sans-serif}
