--- a/src/main/resources/com/javafxdemo/fxml/search-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/search-view.fxml
@@ -2,58 +2,52 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
 <BorderPane prefHeight="560.0" prefWidth="760.0" stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.SearchController">
    <center>
       <AnchorPane prefHeight="466.0" prefWidth="765.0" BorderPane.alignment="CENTER">
+          <VBox layoutY="116.0" prefHeight="532.0" prefWidth="684.0" spacing="10.0" BorderPane.alignment="CENTER">
+              <BorderPane.margin>
+                  <Insets right="20.0" top="20.0" />
+              </BorderPane.margin>
+            <children>
+               <ScrollPane prefHeight="531.0" prefWidth="683.0">
+                 <content>
+                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="522.0" prefWidth="673.0">
+                        <children>
+                                 <TableView fx:id="tableView" prefHeight="522.0" prefWidth="675.0" />
+                        </children>
+                     </AnchorPane>
+                 </content>
+               </ScrollPane>
+            </children>
+          </VBox>
+         <Button fx:id="searchForResultButton" alignment="CENTER" contentDisplay="CENTER" layoutX="742.0" layoutY="43.0" onAction="#onSearchForResultButton" prefHeight="42.0" prefWidth="75.0" text="Go!" />
+         <ImageView fitHeight="52.0" fitWidth="60.0" layoutX="39.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="@../images/LTUSearchIcon.jpg" />
+         </ImageView>
+         <TextField fx:id="searchTextInputField" layoutX="108.0" layoutY="52.0" prefHeight="26.0" prefWidth="624.0" promptText="Enter isbn search here..." text="Choose what you want to search for above..." />
+         <Button fx:id="backButton" layoutX="800.0" layoutY="496.0" mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="34.0" prefWidth="75.0" text="Back" />
+         <Label fx:id="errorLabel" layoutX="716.0" layoutY="252.0" prefHeight="111.0" prefWidth="149.0" wrapText="true" />
+         <Button fx:id="searchResultsLoanButton" layoutX="699.0" layoutY="496.0" mnemonicParsing="false" onAction="#onSearchResultsLoanButton" prefHeight="34.0" prefWidth="75.0" text="Loan" />
+         <Button fx:id="loginRedirectButton" layoutX="751.0" layoutY="372.0" mnemonicParsing="false" onAction="#onLoginRedirectButtonClick" prefHeight="34.0" prefWidth="75.0" text="Login" visible="false" />
+         <ChoiceBox fx:id="choiceBox" layoutX="108.0" layoutY="26.0" prefHeight="25.0" prefWidth="624.0" />
          <BorderPane.margin>
             <Insets />
          </BorderPane.margin>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
-         <Button fx:id="searchForResultButton" alignment="CENTER" contentDisplay="CENTER" layoutX="742.0" layoutY="43.0" onAction="#onSearchForResultButton" prefHeight="42.0" prefWidth="75.0" text="Go!" />
-         <ImageView fitHeight="52.0" fitWidth="60.0" layoutX="39.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@../images/LTUSearchIcon.jpg" />
-         </ImageView>
-         <TextField fx:id="searchTextInputField" layoutX="108.0" layoutY="52.0" prefHeight="26.0" prefWidth="624.0" promptText="Enter isbn search here..." />
-         <Label fx:id="searchResultsArea" layoutX="42.0" layoutY="130.0" prefHeight="473.0" prefWidth="694.0">
-            <padding>
-               <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-            </padding>
-         </Label>
-         <Button fx:id="backButton" layoutX="800.0" layoutY="496.0" mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="34.0" prefWidth="75.0" text="Back" />
-         <Label fx:id="errorLabel" layoutX="716.0" layoutY="252.0" prefHeight="111.0" prefWidth="149.0" wrapText="true" />
-         <Button fx:id="searchResultsLoanButton" layoutX="699.0" layoutY="496.0" mnemonicParsing="false" onAction="#onSearchResultsLoanButton" prefHeight="34.0" prefWidth="75.0" text="Loan" />
-         <Button fx:id="loginRedirectButton" layoutX="751.0" layoutY="372.0" mnemonicParsing="false" onAction="#onLoginRedirectButtonClick" prefHeight="34.0" prefWidth="75.0" text="Login" visible="false" />
-         <GridPane hgap="20.0" layoutX="50.0" layoutY="188.0" prefHeight="342.0" prefWidth="607.0" stylesheets="@../LibraryStylesheet.css" vgap="20.0">
-           <columnConstraints>
-             <ColumnConstraints hgrow="SOMETIMES" maxWidth="386.0" minWidth="10.0" prefWidth="382.0" />
-             <ColumnConstraints hgrow="SOMETIMES" maxWidth="288.0" minWidth="10.0" prefWidth="205.0" />
-           </columnConstraints>
-           <rowConstraints>
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-           </rowConstraints>
-            <children>
-               <Label fx:id="isbnLabel" alignment="TOP_LEFT" prefHeight="83.0" prefWidth="201.0" text="ISBN:" wrapText="true" GridPane.columnIndex="1" />
-               <Label fx:id="titleLabel" alignment="TOP_LEFT" prefHeight="83.0" prefWidth="381.0" text="Title:" wrapText="true" />
-               <Label fx:id="publisherLabel" alignment="TOP_LEFT" prefHeight="83.0" prefWidth="380.0" text="Publisher" wrapText="true" GridPane.rowIndex="2" />
-               <Label fx:id="numberInStockLabel" alignment="TOP_LEFT" prefHeight="83.0" prefWidth="158.0" text="No. in stock:" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-               <Label fx:id="categoryLabel" alignment="TOP_LEFT" prefHeight="83.0" prefWidth="202.0" text="Category: " wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-               <Label fx:id="authorLabel" alignment="TOP_LEFT" contentDisplay="TOP" prefHeight="83.0" prefWidth="399.0" text="Author:" wrapText="true" GridPane.rowIndex="1" />
-            </children>
-         </GridPane>
       </AnchorPane>
    </center>
    <right>
