--- a/src/main/resources/com/javafxdemo/fxml/search-view.fxml
+++ b/src/main/resources/com/javafxdemo/fxml/search-view.fxml
@@ -2,55 +2,73 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="560.0" prefWidth="760.0" stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.SearchController">
+<BorderPane prefHeight="600.0" prefWidth="1000.0" stylesheets="@../LibraryStylesheet.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javafxdemo.controller.SearchController">
    <center>
-      <AnchorPane prefHeight="466.0" prefWidth="765.0" BorderPane.alignment="CENTER">
-          <VBox layoutY="116.0" prefHeight="532.0" prefWidth="684.0" spacing="10.0" BorderPane.alignment="CENTER">
-              <BorderPane.margin>
-                  <Insets right="20.0" top="20.0" />
-              </BorderPane.margin>
-            <children>
-               <ScrollPane prefHeight="531.0" prefWidth="683.0">
-                 <content>
-                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="522.0" prefWidth="673.0">
-                        <children>
-                                 <TableView fx:id="tableView" prefHeight="522.0" prefWidth="675.0" />
-                        </children>
-                     </AnchorPane>
-                 </content>
-               </ScrollPane>
-            </children>
-          </VBox>
-         <Button fx:id="searchForResultButton" alignment="CENTER" contentDisplay="CENTER" layoutX="742.0" layoutY="43.0" onAction="#onSearchForResultButton" prefHeight="42.0" prefWidth="75.0" text="Go!" />
-         <ImageView fitHeight="52.0" fitWidth="60.0" layoutX="39.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@../images/LTUSearchIcon.jpg" />
-         </ImageView>
-         <TextField fx:id="searchTextInputField" layoutX="108.0" layoutY="52.0" prefHeight="26.0" prefWidth="624.0" promptText="Enter isbn search here..." text="Choose what you want to search for above..." />
-         <Button fx:id="backButton" layoutX="800.0" layoutY="496.0" mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="34.0" prefWidth="75.0" text="Back" />
-         <Label fx:id="errorLabel" layoutX="716.0" layoutY="252.0" prefHeight="111.0" prefWidth="149.0" wrapText="true" />
-         <Button fx:id="searchResultsLoanButton" layoutX="699.0" layoutY="496.0" mnemonicParsing="false" onAction="#onSearchResultsLoanButton" prefHeight="34.0" prefWidth="75.0" text="Loan" />
-         <Button fx:id="loginRedirectButton" layoutX="751.0" layoutY="372.0" mnemonicParsing="false" onAction="#onLoginRedirectButtonClick" prefHeight="34.0" prefWidth="75.0" text="Login" visible="false" />
-         <ChoiceBox fx:id="choiceBox" layoutX="108.0" layoutY="26.0" prefHeight="25.0" prefWidth="624.0" />
+      <AnchorPane prefHeight="466.0" prefWidth="765.0" BorderPane.alignment="CENTER_LEFT">
          <BorderPane.margin>
             <Insets />
          </BorderPane.margin>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
+<!--         <Button fx:id="searchForResultButton" alignment="CENTER" contentDisplay="CENTER" layoutX="742.0" layoutY="43.0" onAction="#onSearchForResultButton" prefHeight="42.0" prefWidth="75.0" text="Go!" />&ndash;&gt;-->
+         <ImageView fitHeight="52.0" fitWidth="60.0" layoutX="39.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="@../images/LTUSearchIcon.jpg" />
+         </ImageView>
+         <TextField fx:id="searchTextInputField" layoutX="108.0" layoutY="42.0" prefHeight="26.0" prefWidth="624.0" promptText="Enter isbn, barcode or keywords here to define search items..." />
+         <!--<Label fx:id="searchResultsArea" layoutX="42.0" layoutY="130.0" prefHeight="473.0" prefWidth="694.0">
+            <padding>
+               <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+            </padding>
+         </Label>-->
+<!--         <Button fx:id="backButton" layoutX="800.0" layoutY="496.0" mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="34.0" prefWidth="75.0" text="Back" />-->
+         <TableView fx:id="searchResultsTableView" layoutX="30.0" layoutY="80.0" prefHeight="450.0" prefWidth="956.0">
+             <columns>
+                 <TableColumn fx:id="idItemColumn" prefWidth="55.0" text="Item ID" />
+                 <TableColumn fx:id="titleColumn" prefWidth="285.0" text="Title" />
+                 <TableColumn fx:id="authorLastNameColumn" prefWidth="79.0" text="Author" />
+                 <TableColumn fx:id="authorFirstNameColumn" prefWidth="66.0" />
+                 <TableColumn fx:id="publisherColumn" prefWidth="94.0" text="Publisher" />
+                 <TableColumn fx:id="isbnColumn" prefWidth="137.0" text="ISBN" />
+                 <TableColumn fx:id="categoryColumn" prefWidth="99.0" text="Category" />
+                 <TableColumn fx:id="numberInStockColumn" prefWidth="58.0" text="In Stock" />
+                 <TableColumn fx:id="idBarcodeColumn" prefWidth="103.0" text="Barcode" />
+                 <TableColumn fx:id="totalStockColumn" prefWidth="66.0" text="Tot Stock" visible="false" />
+             </columns>
+         </TableView>
       </AnchorPane>
    </center>
    <right>
       <AnchorPane prefHeight="466.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
    </right>
+   <bottom>
+       <ButtonBar buttonMinWidth="50.0" prefHeight="70.0" prefWidth="84.0" BorderPane.alignment="CENTER">
+           <buttons>
+               <ImageView fitHeight="94.0" fitWidth="153.0" pickOnBounds="true" preserveRatio="true">
+                   <Image url="@../images/LTULogo.jpg" />
+               </ImageView>
+               <Button fx:id="exitButton" mnemonicParsing="false" onAction="#onExitButtonClick" prefHeight="42.0" text="Exit" />
+               <Button fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="42.0" text="Back" />
+               <Button fx:id="searchResultsLoanButton" mnemonicParsing="false" onAction="#onSearchResultsLoanButton" prefHeight="42.0" prefWidth="75.0" text="Loan" />
+               <Label fx:id="errorLabel" mnemonicParsing="false" prefHeight="111.0" prefWidth="149.0" wrapText="true" />
+               <Button fx:id="loginRedirectButton" mnemonicParsing="false" onAction="#onLoginRedirectButtonClick" prefHeight="42.0" prefWidth="75.0" text="Login" visible="false" />
+
+           </buttons>
+
+           <BorderPane.margin>
+               <Insets bottom="15.0" right="15.0" top="15.0" />
+           </BorderPane.margin>
+       </ButtonBar>
+
+   </bottom>
 </BorderPane>
